erDiagram
    User {
        int id PK
        string email
        string name
    }

    Document {
        int id PK
        string title
        text content
        int owner_id FK
        datetime created_at
        datetime updated_at
    }

    DocumentVersion {
        int id PK
        int document_id FK
        string label
        text content
        datetime created_at
    }

    DocumentPermission {
        int id PK
        int document_id FK
        int user_id FK
        string role
    }

    AIInteraction {
        int id PK
        int document_id FK
        int user_id FK
        string feature
        text prompt_excerpt
        text response_text
        string model_name
        string status
        datetime created_at
    }

    User ||--o{ Document : owns
    User ||--o{ DocumentPermission : receives
    User ||--o{ AIInteraction : creates
    Document ||--o{ DocumentVersion : has
    Document ||--o{ DocumentPermission : has
    Document ||--o{ AIInteraction : has
